[gd_scene load_steps=18 format=3 uid="uid://w7k4nsi58t2j"]

[ext_resource type="Texture2D" uid="uid://csfju8sgfthal" path="res://assets/backgrounds/bg-menu.png" id="1_s3qyk"]
[ext_resource type="Script" path="res://scenes/ui/menus/MainMenu.gd" id="1_ut8us"]
[ext_resource type="Texture2D" uid="uid://y22p4lpy6hk" path="res://assets/левая.png" id="2_7hp64"]
[ext_resource type="Texture2D" uid="uid://bewd2r7lhides" path="res://assets/лого.png" id="3_uatbr"]
[ext_resource type="Texture2D" uid="uid://nrb51rxfh0r4" path="res://assets/правая.png" id="3_xsn34"]
[ext_resource type="Texture2D" uid="uid://b5uqqutq5401k" path="res://assets/старт2.png" id="4_o2os0"]
[ext_resource type="Texture2D" uid="uid://cef0yfpkstq6n" path="res://assets/выход2.png" id="5_dyomr"]
[ext_resource type="Texture2D" uid="uid://bq20udhdpyw3g" path="res://assets/on-click_старт.png" id="5_xfdbg"]
[ext_resource type="Texture2D" uid="uid://bf2d4nford1bh" path="res://assets/on-click-выход.png" id="6_qcluo"]
[ext_resource type="Texture2D" uid="uid://bt78imeh7qp1k" path="res://assets/hover-старт.png" id="6_qdwy1"]
[ext_resource type="Texture2D" uid="uid://bpeyegphpftnl" path="res://assets/ховер_выход.png" id="7_pvpfk"]

[sub_resource type="Animation" id="Animation_q267s"]
resource_name = "DoorsOpen"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-36, -3), Vector2(-616, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(568, -3), Vector2(1160, -4.76837e-07)]
}

[sub_resource type="Animation" id="Animation_ixd1e"]
resource_name = "Light"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0117647, 0.0117647, 0.0117647, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4lpag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0117647, 0.0117647, 0.0117647, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1160, -4.76837e-07)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftDoor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-616, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgmyg"]
_data = {
"DoorsOpen": SubResource("Animation_q267s"),
"Light": SubResource("Animation_ixd1e"),
"RESET": SubResource("Animation_4lpag")
}

[sub_resource type="Animation" id="Animation_y7wnb"]
resource_name = "Light"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0117647, 0.0117647, 0.0117647, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34u6o"]
_data = {
"Light": SubResource("Animation_y7wnb")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ut8us")

[node name="LeftDoor" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -616.0
offset_right = -12.0
offset_bottom = 651.0
texture = ExtResource("2_7hp64")
expand_mode = 3

[node name="RightDoor" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1160.0
offset_right = 2078.01
offset_bottom = 659.0
scale = Vector2(0.641673, 0.986429)
texture = ExtResource("3_xsn34")
expand_mode = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_s3qyk")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_uatbr")
expand_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Start" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("4_o2os0")
texture_pressed = ExtResource("5_xfdbg")
texture_hover = ExtResource("6_qdwy1")

[node name="SinglePlayer" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer"]
self_modulate = Color(0.72549, 1, 1, 1)
layout_mode = 2
texture_normal = ExtResource("4_o2os0")
texture_pressed = ExtResource("5_xfdbg")
texture_hover = ExtResource("6_qdwy1")

[node name="Quit" type="TextureButton" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("5_dyomr")
texture_pressed = ExtResource("6_qcluo")
texture_hover = ExtResource("7_pvpfk")

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
position = Vector2(-14, -2)
color = Color(0.0117647, 0.0117647, 0.0117647, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pgmyg")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_34u6o")
}

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer/SinglePlayer" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
